connection with DB

--- a/PhoneBook/Views/Contacts/List.cshtml
+++ b/PhoneBook/Views/Contacts/List.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model List<PhoneBook.Models.Contact>
+@model List<PhoneBook.Models.DataModels.Contact>
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
